<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/screen"
    android:padding="40dp"
    >
    <LinearLayout
        android:id="@+id/nums"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/screen"
        app:layout_constraintStart_toStartOf="@id/screen">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginVertical="30dp"/>
        <TableLayout
            android:id="@+id/table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/a"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_column="0" />

                <EditText
                    android:id="@+id/txta"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:inputType="numberDecimal"
                    android:background="@drawable/border"
                    android:hint="@string/ta"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:textSize="30sp">

                </EditText>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_column="1" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/b"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_column="0" />

                <EditText
                    android:id="@+id/txtb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:inputType="numberDecimal"
                    android:textSize="30sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:background="@drawable/border"
                    android:hint="@string/tb">

                </EditText>

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="25dp"
        app:layout_constraintBottom_toTopOf="@+id/func"
        app:layout_constraintStart_toStartOf="@+id/screen"
        app:layout_constraintTop_toBottomOf="@+id/nums"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="fill_parent"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/result" />

        <TextView
            android:id="@+id/result"
            android:layout_width="fill_parent"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            android:textSize="30sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/func"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/screen"
        app:layout_constraintEnd_toEndOf="@id/screen"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/screen"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:text="@string/plus"
                android:textSize="40sp"
                app:cornerRadius="10dp">
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:text="@string/minus"
                android:textSize="40sp"
                app:cornerRadius="10dp">
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:text="@string/mul"
                android:textSize="40sp"
                app:cornerRadius="10dp">
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:text="@string/div"
                android:textSize="40sp"
                app:cornerRadius="10dp">
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/and"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:text="@string/and"
                android:textSize="40sp"
                app:cornerRadius="10dp">
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>